# pyduino

./: .gitattributes  .gitignore  README.md
arduino/AnalogReadSerial/: AnalogReadSerial.ino
arduino/AnalogReadSerial_allpins/: AnalogReadSerial_allpins.ino
arduino/AnalogReadSerial_one_digi_one_ana/: AnalogReadSerial_one_digi_one_ana.ino
arduino/AnalogReadSerial_one_digi_one_ana_three_inputs/: AnalogReadSerial_one_digi_one_ana_three_inputs.ino
arduino/AnalogReadSerial_two_digi_oneanalog_inner_loop_dual_sensor/: AnalogReadSerial_two_digi_oneanalog_inner_loop_dual_sensor.ino
arduino/DS18x20_Temp_combine_with_sdi12_neat/: DS18x20_Temp_combine_with_sdi12_neat.ino
arduino/DS18x20_Temp_moisture_mega_for_bp/: DS18x20_Temp_moisture_mega_for_bp.ino
arduino/DS18x20_Temperature_combine_with_sdi12/: DS18x20_Temperature_combine_with_sdi12.ino
arduino/Mega_one_digi_one_ana_2_13/: Mega_one_digi_one_ana_2_13.ino
bash/: README.md  add_user  arduino_read_ec5_mux_shield_roof1.sh  arduino_read_moist_DS18x20_sht11_bp_phant.sh  arduino_read_weather_station_1.sh  arduino_read_weather_station_2.sh  area51_2mo_3heatsuc_2salt_2drsuc_gs3_compacted_redmud (mac's conflicted copy 2018-04-07).sh  area51_2mo_3heatsuc_2salt_2drsuc_gs3_compacted_redmud.sh  autossh_first_channel.sh  autossh_mango_for_vnc.sh  autossh_second_channel.sh  autossh_to_sftp_uqgec.sh  bacteria.sh  cali_2moist_2heatsuc_2salinity_2ceramsuc_phant.sh  camera_photo.sh  campbell_logging.sh  change_wlan0_to_router.sh  check_internet_connection_and_reboot_if_needed.sh  configure_new_rpi3_strech_as_hydrogeologger.sh  davis_wind.sh  ec5_mps2_ds18_weather_uv_pet_et_roof_daisy.sh  gelita_watch_update.sh  grange_4_type_abd_column_6.sh  grange_5_column_4.sh  grange_a.sh  grange_d.sh  hard_reset_system.sh  hard_shutdown_pi.sh  humidity_chamber.sh  kathy_tensiometer.sh  loadcell_twolayer_tas606_TE.sh  mega_logger1_aster.sh  mux_logger2_bougainvillea.sh  reboot_pi.sh  reset_mcu.sh  rs232_ohaus_nvl20000_phant.sh  savage_weater_1_mps.sh  send_ip_tb.sh  serial_session.sh  shutdown_pi.sh  (+2 more)
credential/: humchamber.json  readme  readme.md  scale_habib.json
data/: readme
html/: cali_2loadcell_2sucmoist_2moist_2saltrh_2sucheat.html  d3_json_multiple_graph.html  d3_json_multiple_graph_baoping.html  plot_calibration_geolab_1st_scale.html  plot_calibrtion_geolab_2sucmoist_2moist_2saltrh_2sucheat.html
install/: common.sh  common_armbian.sh  hostname.sh  install_bpim2zero.sh  install_rpi.sh
python/: .gitignore  .grange_type_D.py.swn  .grange_type_D.py.swo  .grange_type_D.py.swp  .grange_type_b.py.swk  .grange_type_b.py.swm  .grange_type_b.py.swo  .grange_type_b.py.swp  .grange_weather_b_mps.swp  .humidity_chamber.py.swp  .scales_habib.py.swp  .scales_kathy.py.swp  Felipe.py  TB_io_test.py  amrit_amphirol_enclosure_1.py  amrit_amphirol_enclosure_2.py  area51_2mo_3heatsuc40s_ds18_tmp36_2salt_2drsuc_redmud.py  area51_marandoo.py  bacteria.py  basin_test_cali.py  boiling.py  cali_2moist_2heatsuc_2salinity_2ceramsuc_phant.py  camellia_prototype_logger.py  camellia_prototype_weather.py  campbell_logging.py  class_thingspeak.py  csv_tools.py  daisy_prototype_logger.py  daisy_prototype_weather.py  ec5_mps2_ds18_weather_uv_pet_et_roof_daisy.py  gelita_pizo_update_mango.py  get_ip.py  gpio_floodlight_camera.py  grange_4.py  grange_4_type_abd_column_6.py  grange_5.py  grange_7261_3.py  grange_type_D.py  grange_type_a.py  grange_type_b.py  (+55 more)
python/lib/mqtthelper/: __init__.py  build_docs.py  pyproject.toml  readme.md  setup.cfg  setup.py
python/lib/mqtthelper/docs/: mqtthelper.md  readme.md
python/lib/mqtthelper/mqtthelper/: __init__.py
python/lib/mqtthelper/src/mqtthelper/: __init__.py
python/lib/postprocess/: README.md  __init__.py  build_docs.py  common.py  filehandler.py  interpolation.py  pyproject.toml  setup.cfg  setup.py
python/lib/postprocess/docs/: .pages  postprocess.common.md  postprocess.extern.md  postprocess.filehandler.md  postprocess.interpolation.md  postprocess.pandas_ext.md  readme.md
python/lib/postprocess/postprocess/: __init__.py  common.py  interpolation.py  pandas_ext.py
python/lib/postprocess/src/postprocess/: __init__.py  common.py  interpolation.py  pandas_ext.py
python/lib/pyduino-sensor/: __init__.py  build_doc.py  davis.py  pyduino.py  pyproject.toml  readme.md  setup.cfg  setup.py
python/lib/pyduino-sensor/base/: sensor.py
python/lib/pyduino-sensor/docs/: pyduino_sensor.base.input_devices.md  pyduino_sensor.base.md  pyduino_sensor.base.sensor.md  pyduino_sensor.davis.md  pyduino_sensor.post.common.md  pyduino_sensor.post.md  pyduino_sensor.post.si114x.md  pyduino_sensor.post.suction.md  pyduino_sensor.post.wind.md  pyduino_sensor.pyduino.md  pyduino_sensor.scales.md  readme.md
python/lib/pyduino-sensor/post/: common.py  si114x.py  suction.py  wind.py
python/lib/pyduino-sensor/pyduino_sensor/: davis.py  input_devices.py  sensor.py
python/lib/pyduino-sensor/pyduino_sensor/base/: __init__.py  input_devices.py
python/lib/pyduino-sensor/pyduino_sensor/post/: __init__.py  common.py  suction.py  wind.py
python/lib/pyduino-sensor/src/pyduino_sensor/: davis.py  pyduino.py  scales.py
python/lib/pyduino-sensor/src/pyduino_sensor/base/: input_devices.py
python/lib/pyduino-sensor/src/pyduino_sensor/post/: si114x.py  wind.py
python/lib/thingsboard-api/: build_doc.py  pyproject.toml  readme.md  setup.cfg  setup.py  tb_pandas.py  tb_rest_api.py
python/lib/thingsboard-api/docs/: .pages  readme.md  thingsboard_api.tb_pandas.md  thingsboard_api.tb_rest_api.md
python/lib/thingsboard-api/src/thingsboard_api/: __init__.py  tb_pandas.py  tb_rest_api.py
python/lib/thingsboard-api/thingsboard_api/: tb_pandas.py  tb_rest_api.py
python/lib/thingsboard_api/: __init__.py  pyproject.toml  readme.md  setup.cfg  setup.py  tb_pandas.py  tb_rest_api.py
python/lib/thingsboard_api/docs/: README.md  README2.md  thingsboard_api.tb_pandas.md  thingsboard_api.tb_rest_api.md  thingsboard_api.thingsboard_api.md
python/lib/thingsboard_api/thingsboard_api/: tb_pandas.py
sim7600/: sim7600.py  sim7600_init  sim7600_off
(+190 files in other folders)
