[metadata]
name = mqtthelper
# version = attr: name.__version__
author = Lieven Tan
description = paho-mqtt wrapper providing file based publishing queue redundancy.
url = https://github.com/hydrogeologger/pyduino

[options]
python_requires = >=2.7
install_requires =
    paho-mqtt >= 1.6.1
packages = find:

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = .
# include = * by default
include = *
# exclude = "" empty by default
exclude =
