[metadata]
name = mqtthelper
version = attr: mqtthelper.__version__
author = Lieven Tan
description = paho-mqtt wrapper providing file based publishing queue redundancy.
url = https://github.com/hydrogeologger/pyduino
project_urls =
    Bug Tracker = https://github.com/hydrogeologger/pyduino/issues
keywords = hydrogeologger, mqtt
classifiers =
    # Project maturity
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta

    # Python version support
    Programming Language :: Python

[options]
python_requires = >=2.7
install_requires =
    paho-mqtt >= 1.6.1
# Directory containing packages
package_dir =
    = src
packages = find:

[options.extras_require]
dev =
    pytest

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = src
# include = * by default
include = mqtthelper*
# exclude = "" empty by default
exclude =
