[metadata]
name = postprocess
# version = attr: postprocess.__version__
author = Lieven Tan, Chenming Zhang
description = Hydrogeologger/Pyduino postprocessing helper package
url = https://github.com/hydrogeologger/pyduino

[options]
python_requires = >=2.7
install_requires =
    pandas >= 0.24.2
    numpy
packages = find:

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = .
# include = * by default
include = postprocess*
# exclude = "" empty by default
exclude =
