[metadata]
name = postprocess
version = attr: postprocess.__version__
author = Lieven Tan, Chenming Zhang
description = Hydrogeologger/Pyduino postprocessing helper package
url = https://github.com/hydrogeologger/pyduino
project_urls =
    Bug Tracker = https://github.com/hydrogeologger/pyduino/issues
keywords = hydrogeologger, postprocess, pandas
classifiers =
    # Project maturity
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Python version support
    Programming Language :: Python

[options]
python_requires = >=2.7
install_requires =
    pandas >= 0.24.2
    matplotlib
    numpy
    scipy
# Directory containing packages
package_dir =
    = src
packages = find:

[options.extras_require]
dev =
    pytest

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = src
# include = * by default
include = postprocess*
# exclude = "" empty by default
exclude =
