[metadata]
name = pyduino-sensor
version = attr: pyduino_sensor.__version__
author = Lieven Tan
description = Hydrogeologger/Pyduino sensor hardware and post processing helper package
url = https://github.com/hydrogeologger/pyduino
project_urls =
    Bug Tracker = https://github.com/hydrogeologger/pyduino/issues
keywords = pyduino, sensor
classifiers =
    # Project maturity
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Python version support
    Programming Language :: Python

[options]
python_requires = >=2.7
install_requires =
    gpiozero; platform_machine == 'armv6l'
    pyserial; platform_machine == 'armv61'
# Directory containing packages
package_dir =
    = src
packages = find:

[options.extras_require]
rpi =
    gpiozero
    pyserial
dev =
    pyduino-sensor[rpi]
    pytest

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = src
# include = * by default
include = pyduino_sensor*
# exclude = "" empty by default
exclude =
