[metadata]
name = thingsboard-api
version = attr: thingsboard_api.__version__
author = Lieven Tan
description = Hydrogeologger/Pyduino python package partially implementing thingsboard rest api and some pandas helper functions
url = https://github.com/hydrogeologger/pyduino
project_urls =
    Bug Tracker = https://github.com/hydrogeologger/pyduino/issues
keywords = thingsboard
classifiers =
    # Project maturity
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Python version support
    Programming Language :: Python

[options]
python_requires = >=2.7
install_requires =
    pandas >= 0.24.2
    requests
# Directory containing packages
package_dir =
    = src
packages = find:

[options.extras_require]
dev =
    pytest

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = src
# include = * by default
include = thingsboard_api*
# exclude = "" empty by default
exclude =
