[metadata]
name = thingsboard_api
# version = attr: name.__version__
author = Lieven Tan, Chenming Zhang
description = Hydrogeologger/Pyduino python package partially implementing thingsboard rest api and some pandas helper functions
url = https://github.com/hydrogeologger/pyduino

[options]
python_requires = >=2.7
install_requires =
    pandas >= 0.24.2
    requests
packages = find:

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
# where = . by default
where = .
# include = * by default
include = thingsboard_api*
# exclude = "" empty by default
exclude =
